# Synapse-Research-Agent

./: README.md
backend/: README.md  app.py  pyproject.toml  server.py
backend/agents/: audio_overview_agent.py  chat_agent.py  mindmap_agent.py  sources_research_agent.py  topic_research_agent.py
backend/config/: __init__.py  logging.py
backend/models/: audio_overview_models.py  db.py
backend/routers/: __init__.py  chat.py  research.py
backend/services/: audio_overview_service.py  notebook_repository.py  qdrant_service.py  r2_service.py  task_service.py  tts_service.py
client/: .gitignore  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/api/notebooks/[id]/sources/: route.ts
client/app/auth/: page.tsx
client/components/: auth-aware-button.tsx  footer.tsx
client/components/header/: header-client.tsx
client/components/notebook/: create-notebook-dialog.tsx  delete-notebook-menu.tsx  edit-notebook-sources.tsx  notebook-polling.tsx  sources-wrapper.tsx  visual-mindmap.tsx
client/components/ui/: donation-button.tsx  file-upload.tsx  markdown-components.tsx
client/lib/: auth.ts  prisma.ts  r2.ts
client/prisma/: schema.prisma
