[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.1",
    "fastapi>=0.135.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.48",
]
