[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.84",
    "crewai>=1.6.1",
    "crewai-tools[mcp]>=1.6.1",
    "fastapi>=0.135.2",
    "loguru>=0.7.3",
    "markitdown>=0.1.5",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.48",
]
